// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text-editor Renders \`text-editor\` with custom props 1`] = `
<div
  class="text-editor"
>
  <label
    aria-hidden="true"
    class="v-label theme--light"
    style="left: 0px; position: relative;"
  >
    Text editor label
  </label>
  <div
    class="text-editor error--text"
  >
    <div
      class="jodit_container jodit_default_theme jodit_toolbar_size-middle jodit_wysiwyg_mode"
      contenteditable="false"
      style="min-height: 200px; min-width: 200px; max-width: 100%; height: auto; width: auto;"
    >
      <ul
        class="jodit_toolbar"
        style="width: auto;"
      >
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-empty"
        >
          <a>
            <span>
              <span
                class="jodit_icon jodit_icon_empty"
              />
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-empty"
        >
          <a>
            <span>
              <span
                class="jodit_icon jodit_icon_empty"
              />
            </span>
          </a>
        </li>
      </ul>
      <div
        class="jodit_workplace"
        contenteditable="false"
        style="min-height: 200px; height: auto;"
      >
        <div
          class="jodit_progress_bar"
        >
          <div />
        </div>
        <div
          aria-disabled="false"
          class="jodit_wysiwyg"
          contenteditable="true"
          spellcheck="true"
          style="min-height: 198px;"
          tabindex="-1"
        >
          <div>
            <p>
              Paragraph
            </p>
          </div>
        </div>
        <div
          class="jodit_error_box_for_messages"
        />
        <span
          class="jodit_placeholder"
          style="display: none;"
        >
          Type something
        </span>
        <div
          class="jodit_source"
        >
          <textarea
            class="jodit_source_mirror"
            style="height: 0px; min-height: 198px;"
          />
        </div>
        <div
          class="jodit_search"
        >
          <div
            class="jodit_search_box"
          >
            <div
              class="jodit_search_inputs"
            >
              <input
                class="jodit_search-query"
                placeholder="Search for"
                tabindex="0"
                type="text"
              />
              <input
                class="jodit_search-replace"
                placeholder="Replace with"
                tabindex="0"
                type="text"
              />
            </div>
            <div
              class="jodit_search_counts"
            >
              <span>
                0/0
              </span>
            </div>
            <div
              class="jodit_search_buttons"
            >
              <button
                class="jodit_search_buttons-next"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 1792 1792"
                >
                  <path
                    d="M1395 736q0 13-10 23l-466 466q-10 10-23 10t-23-10l-466-466q-10-10-10-23t10-23l50-50q10-10 23-10t23 10l393 393 393-393q10-10 23-10t23 10l50 50q10 10 10 23z"
                  />
                </svg>
              </button>
              <button
                class="jodit_search_buttons-prev"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 1792 1792"
                >
                  <path
                    d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
                  />
                </svg>
              </button>
              <button
                class="jodit_search_buttons-cancel"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 16 16"
                >
                  <g
                    transform="translate(0,-1036.3622)"
                  >
                    <path
                      d="m 2,1050.3622 12,-12"
                      style="fill:none;stroke:#000000;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"
                    />
                    <path
                      d="m 2,1038.3622 12,12"
                      style="fill:none;stroke:#000000;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"
                    />
                  </g>
                </svg>
              </button>
              <button
                class="jodit_search_buttons-replace"
                tabindex="0"
                type="button"
              >
                Replace
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="jodit_statusbar"
        style="display: block;"
      >
        <div
          class="jodit_statusbar_item jodit_statusbar_item-right"
        >
          <span>
            Chars: 9
          </span>
        </div>
        <div
          class="jodit_statusbar_item jodit_statusbar_item-right"
        >
          <span>
            Words: 1
          </span>
        </div>
        <div
          class="jodit_statusbar_item"
        >
          <ul
            class="jodit_xpath"
          >
            <li
              class="jodit_toolbar_btn jodit_toolbar_btn-selectall"
            >
              <a>
                <span>
                  <svg
                    class="jodit_icon jodit_icon_selectall"
                    viewBox="0 0 18 18"
                  >
                    <g
                      fill-rule="evenodd"
                      stroke="none"
                      stroke-width="1"
                    >
                      <g
                        transform="translate(-381.000000, -381.000000)"
                      >
                        <g
                          transform="translate(381.000000, 381.000000)"
                        >
                          <path
                            d="M0,2 L2,2 L2,0 C0.9,0 0,0.9 0,2 L0,2 Z M0,10 L2,10 L2,8 L0,8 L0,10 L0,10 Z M4,18 L6,18 L6,16 L4,16 L4,18 L4,18 Z M0,6 L2,6 L2,4 L0,4 L0,6 L0,6 Z M10,0 L8,0 L8,2 L10,2 L10,0 L10,0 Z M16,0 L16,2 L18,2 C18,0.9 17.1,0 16,0 L16,0 Z M2,18 L2,16 L0,16 C0,17.1 0.9,18 2,18 L2,18 Z M0,14 L2,14 L2,12 L0,12 L0,14 L0,14 Z M6,0 L4,0 L4,2 L6,2 L6,0 L6,0 Z M8,18 L10,18 L10,16 L8,16 L8,18 L8,18 Z M16,10 L18,10 L18,8 L16,8 L16,10 L16,10 Z M16,18 C17.1,18 18,17.1 18,16 L16,16 L16,18 L16,18 Z M16,6 L18,6 L18,4 L16,4 L16,6 L16,6 Z M16,14 L18,14 L18,12 L16,12 L16,14 L16,14 Z M12,18 L14,18 L14,16 L12,16 L12,18 L12,18 Z M12,2 L14,2 L14,0 L12,0 L12,2 L12,2 Z M4,14 L14,14 L14,4 L4,4 L4,14 L4,14 Z M6,6 L12,6 L12,12 L6,12 L6,6 L6,6 Z"
                          />
                        </g>
                      </g>
                    </g>
                  </svg>
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="jodit-add-new-line"
        role="button"
        tabindex="-1"
        title="Break"
      >
        <span>
          <svg
            viewBox="0 0 128 128"
            xml:space="preserve"
          >
            <g>
              <polygon
                points="112.4560547,23.3203125 112.4560547,75.8154297 31.4853516,75.8154297 31.4853516,61.953125     16.0131836,72.6357422 0.5410156,83.3164063 16.0131836,93.9990234 31.4853516,104.6796875 31.4853516,90.8183594     112.4560547,90.8183594 112.4560547,90.8339844 127.4589844,90.8339844 127.4589844,23.3203125   "
              />
            </g>
          </svg>
        </span>
      </div>
    </div>
    <div
      style="display: none;"
    >
      <div>
        <p>
          Paragraph
        </p>
      </div>
    </div>
    <!---->
    <div
      class="text-editor__details"
    >
      <div
        class="v-messages theme--light error--text"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        >
          <div
            class="v-messages__message"
          >
            Error
          </div>
        </transition-group-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`text-editor Renders \`text-editor\` with default props 1`] = `
<div
  class="text-editor"
>
  <label
    aria-hidden="true"
    class="v-label theme--light"
    style="left: 0px; position: relative; display: none;"
  >
  </label>
  <div
    class="text-editor"
  >
    <div
      class="jodit_container jodit_default_theme jodit_toolbar_size-middle jodit_wysiwyg_mode"
      contenteditable="false"
      style="min-height: 200px; min-width: 200px; max-width: 100%; height: auto; width: auto;"
    >
      <ul
        class="jodit_toolbar"
        style="width: auto;"
      >
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-source"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_source"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M553 1399l-50 50q-10 10-23 10t-23-10l-466-466q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l50 50q10 10 10 23t-10 23l-393 393 393 393q10 10 10 23t-10 23zm591-1067l-373 1291q-4 13-15.5 19.5t-23.5 2.5l-62-17q-13-4-19.5-15.5t-2.5-24.5l373-1291q4-13 15.5-19.5t23.5-2.5l62 17q13 4 19.5 15.5t2.5 24.5zm657 651l-466 466q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l393-393-393-393q-10-10-10-23t10-23l50-50q10-10 23-10t23 10l466 466q10 10 10 23t-10 23z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-bold"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_bold"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M747 1521q74 32 140 32 376 0 376-335 0-114-41-180-27-44-61.5-74t-67.5-46.5-80.5-25-84-10.5-94.5-2q-73 0-101 10 0 53-.5 159t-.5 158q0 8-1 67.5t-.5 96.5 4.5 83.5 12 66.5zm-14-746q42 7 109 7 82 0 143-13t110-44.5 74.5-89.5 25.5-142q0-70-29-122.5t-79-82-108-43.5-124-14q-50 0-130 13 0 50 4 151t4 152q0 27-.5 80t-.5 79q0 46 1 69zm-541 889l2-94q15-4 85-16t106-27q7-12 12.5-27t8.5-33.5 5.5-32.5 3-37.5.5-34v-65.5q0-982-22-1025-4-8-22-14.5t-44.5-11-49.5-7-48.5-4.5-30.5-3l-4-83q98-2 340-11.5t373-9.5q23 0 68.5.5t67.5.5q70 0 136.5 13t128.5 42 108 71 74 104.5 28 137.5q0 52-16.5 95.5t-39 72-64.5 57.5-73 45-84 40q154 35 256.5 134t102.5 248q0 100-35 179.5t-93.5 130.5-138 85.5-163.5 48.5-176 14q-44 0-132-3t-132-3q-106 0-307 11t-231 12z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-italic"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_italic"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M384 1662l17-85q6-2 81.5-21.5t111.5-37.5q28-35 41-101 1-7 62-289t114-543.5 52-296.5v-25q-24-13-54.5-18.5t-69.5-8-58-5.5l19-103q33 2 120 6.5t149.5 7 120.5 2.5q48 0 98.5-2.5t121-7 98.5-6.5q-5 39-19 89-30 10-101.5 28.5t-108.5 33.5q-8 19-14 42.5t-9 40-7.5 45.5-6.5 42q-27 148-87.5 419.5t-77.5 355.5q-2 9-13 58t-20 90-16 83.5-6 57.5l1 18q17 4 185 31-3 44-16 99-11 0-32.5 1.5t-32.5 1.5q-29 0-87-10t-86-10q-138-2-206-2-51 0-143 9t-121 11z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-strikethrough"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_strikethrough"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1760 896q14 0 23 9t9 23v64q0 14-9 23t-23 9h-1728q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h1728zm-1277-64q-28-35-51-80-48-97-48-188 0-181 134-309 133-127 393-127 50 0 167 19 66 12 177 48 10 38 21 118 14 123 14 183 0 18-5 45l-12 3-84-6-14-2q-50-149-103-205-88-91-210-91-114 0-182 59-67 58-67 146 0 73 66 140t279 129q69 20 173 66 58 28 95 52h-743zm507 256h411q7 39 7 92 0 111-41 212-23 55-71 104-37 35-109 81-80 48-153 66-80 21-203 21-114 0-195-23l-140-40q-57-16-72-28-8-8-8-22v-13q0-108-2-156-1-30 0-68l2-37v-44l102-2q15 34 30 71t22.5 56 12.5 27q35 57 80 94 43 36 105 57 59 22 132 22 64 0 139-27 77-26 122-86 47-61 47-129 0-84-81-157-34-29-137-71z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-underline"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_underline"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M176 223q-37-2-45-4l-3-88q13-1 40-1 60 0 112 4 132 7 166 7 86 0 168-3 116-4 146-5 56 0 86-2l-1 14 2 64v9q-60 9-124 9-60 0-79 25-13 14-13 132 0 13 .5 32.5t.5 25.5l1 229 14 280q6 124 51 202 35 59 96 92 88 47 177 47 104 0 191-28 56-18 99-51 48-36 65-64 36-56 53-114 21-73 21-229 0-79-3.5-128t-11-122.5-13.5-159.5l-4-59q-5-67-24-88-34-35-77-34l-100 2-14-3 2-86h84l205 10q76 3 196-10l18 2q6 38 6 51 0 7-4 31-45 12-84 13-73 11-79 17-15 15-15 41 0 7 1.5 27t1.5 31q8 19 22 396 6 195-15 304-15 76-41 122-38 65-112 123-75 57-182 89-109 33-255 33-167 0-284-46-119-47-179-122-61-76-83-195-16-80-16-237v-333q0-188-17-213-25-36-147-39zm1488 1409v-64q0-14-9-23t-23-9h-1472q-14 0-23 9t-9 23v64q0 14 9 23t23 9h1472q14 0 23-9t9-23z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-ul"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_ul"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M384 1408q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm0-512q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm1408 416v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5zm-1408-928q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm1408 416v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5zm0-512v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-ol"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_ol"
                role="img"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M381 1620q0 80-54.5 126t-135.5 46q-106 0-172-66l57-88q49 45 106 45 29 0 50.5-14.5t21.5-42.5q0-64-105-56l-26-56q8-10 32.5-43.5t42.5-54 37-38.5v-1q-16 0-48.5 1t-48.5 1v53h-106v-152h333v88l-95 115q51 12 81 49t30 88zm2-627v159h-362q-6-36-6-54 0-51 23.5-93t56.5-68 66-47.5 56.5-43.5 23.5-45q0-25-14.5-38.5t-39.5-13.5q-46 0-81 58l-85-59q24-51 71.5-79.5t105.5-28.5q73 0 123 41.5t50 112.5q0 50-34 91.5t-75 64.5-75.5 50.5-35.5 52.5h127v-60h105zm1409 319v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-14 9-23t23-9h1216q13 0 22.5 9.5t9.5 22.5zm-1408-899v99h-335v-99h107q0-41 .5-122t.5-121v-12h-2q-8 17-50 54l-71-76 136-127h106v404h108zm1408 387v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-14 9-23t23-9h1216q13 0 22.5 9.5t9.5 22.5zm0-512v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_with_dropdownlist jodit_toolbar_btn-font"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_font"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M789 559l-170 450q33 0 136.5 2t160.5 2q19 0 57-2-87-253-184-452zm-725 1105l2-79q23-7 56-12.5t57-10.5 49.5-14.5 44.5-29 31-50.5l237-616 280-724h128q8 14 11 21l205 480q33 78 106 257.5t114 274.5q15 34 58 144.5t72 168.5q20 45 35 57 19 15 88 29.5t84 20.5q6 38 6 57 0 4-.5 13t-.5 13q-63 0-190-8t-191-8q-76 0-215 7t-178 8q0-43 4-78l131-28q1 0 12.5-2.5t15.5-3.5 14.5-4.5 15-6.5 11-8 9-11 2.5-14q0-16-31-96.5t-72-177.5-42-100l-450-2q-26 58-76.5 195.5t-50.5 162.5q0 22 14 37.5t43.5 24.5 48.5 13.5 57 8.5 41 4q1 19 1 58 0 9-2 27-58 0-174.5-10t-174.5-10q-8 0-26.5 4t-21.5 4q-80 14-188 14z"
                />
              </svg>
            </span>
            <span
              class="jodit_with_dropdownlist-trigger"
            />
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_with_dropdownlist jodit_toolbar_btn-fontsize"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_fontsize"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1744 1408q33 0 42 18.5t-11 44.5l-126 162q-20 26-49 26t-49-26l-126-162q-20-26-11-44.5t42-18.5h80v-1024h-80q-33 0-42-18.5t11-44.5l126-162q20-26 49-26t49 26l126 162q20 26 11 44.5t-42 18.5h-80v1024h80zm-1663-1279l54 27q12 5 211 5 44 0 132-2t132-2q36 0 107.5.5t107.5.5h293q6 0 21 .5t20.5 0 16-3 17.5-9 15-17.5l42-1q4 0 14 .5t14 .5q2 112 2 336 0 80-5 109-39 14-68 18-25-44-54-128-3-9-11-48t-14.5-73.5-7.5-35.5q-6-8-12-12.5t-15.5-6-13-2.5-18-.5-16.5.5q-17 0-66.5-.5t-74.5-.5-64 2-71 6q-9 81-8 136 0 94 2 388t2 455q0 16-2.5 71.5t0 91.5 12.5 69q40 21 124 42.5t120 37.5q5 40 5 50 0 14-3 29l-34 1q-76 2-218-8t-207-10q-50 0-151 9t-152 9q-3-51-3-52v-9q17-27 61.5-43t98.5-29 78-27q19-42 19-383 0-101-3-303t-3-303v-117q0-2 .5-15.5t.5-25-1-25.5-3-24-5-14q-11-12-162-12-33 0-93 12t-80 26q-19 13-34 72.5t-31.5 111-42.5 53.5q-42-26-56-44v-383z"
                />
              </svg>
            </span>
            <span
              class="jodit_with_dropdownlist-trigger"
            />
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-brush"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_brush"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M896 1152q0-36-20-69-1-1-15.5-22.5t-25.5-38-25-44-21-50.5q-4-16-21-16t-21 16q-7 23-21 50.5t-25 44-25.5 38-15.5 22.5q-20 33-20 69 0 53 37.5 90.5t90.5 37.5 90.5-37.5 37.5-90.5zm512-128q0 212-150 362t-362 150-362-150-150-362q0-145 81-275 6-9 62.5-90.5t101-151 99.5-178 83-201.5q9-30 34-47t51-17 51.5 17 33.5 47q28 93 83 201.5t99.5 178 101 151 62.5 90.5q81 127 81 275z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_with_dropdownlist jodit_toolbar_btn-paragraph"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_paragraph"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1534 189v73q0 29-18.5 61t-42.5 32q-50 0-54 1-26 6-32 31-3 11-3 64v1152q0 25-18 43t-43 18h-108q-25 0-43-18t-18-43v-1218h-143v1218q0 25-17.5 43t-43.5 18h-108q-26 0-43.5-18t-17.5-43v-496q-147-12-245-59-126-58-192-179-64-117-64-259 0-166 88-286 88-118 209-159 111-37 417-37h479q25 0 43 18t18 43z"
                />
              </svg>
            </span>
            <span
              class="jodit_with_dropdownlist-trigger"
            />
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-image"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_image"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M576 576q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm1024 384v448h-1408v-192l320-320 160 160 512-512zm96-704h-1600q-13 0-22.5 9.5t-9.5 22.5v1216q0 13 9.5 22.5t22.5 9.5h1600q13 0 22.5-9.5t9.5-22.5v-1216q0-13-9.5-22.5t-22.5-9.5zm160 32v1216q0 66-47 113t-113 47h-1600q-66 0-113-47t-47-113v-1216q0-66 47-113t113-47h1600q66 0 113 47t47 113z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-table"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_table"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M576 1376v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm0-384v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm512 384v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm-512-768v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm512 384v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm512 384v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm-512-768v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm512 384v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm0-384v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm128-320v1088q0 66-47 113t-113 47h-1344q-66 0-113-47t-47-113v-1088q0-66 47-113t113-47h1344q66 0 113 47t47 113z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-link"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_link"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1520 1216q0-40-28-68l-208-208q-28-28-68-28-42 0-72 32 3 3 19 18.5t21.5 21.5 15 19 13 25.5 3.5 27.5q0 40-28 68t-68 28q-15 0-27.5-3.5t-25.5-13-19-15-21.5-21.5-18.5-19q-33 31-33 73 0 40 28 68l206 207q27 27 68 27 40 0 68-26l147-146q28-28 28-67zm-703-705q0-40-28-68l-206-207q-28-28-68-28-39 0-68 27l-147 146q-28 28-28 67 0 40 28 68l208 208q27 27 68 27 42 0 72-31-3-3-19-18.5t-21.5-21.5-15-19-13-25.5-3.5-27.5q0-40 28-68t68-28q15 0 27.5 3.5t25.5 13 19 15 21.5 21.5 18.5 19q33-31 33-73zm895 705q0 120-85 203l-147 146q-83 83-203 83-121 0-204-85l-206-207q-83-83-83-203 0-123 88-209l-88-88q-86 88-208 88-120 0-204-84l-208-208q-84-84-84-204t85-203l147-146q83-83 203-83 121 0 204 85l206 207q83 83 83 203 0 123-88 209l88 88q86-88 208-88 120 0 204 84l208 208q84 84 84 204z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_with_dropdownlist jodit_toolbar_btn-left"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_left"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1792 1344v128q0 26-19 45t-45 19h-1664q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1664q26 0 45 19t19 45zm-384-384v128q0 26-19 45t-45 19h-1280q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1280q26 0 45 19t19 45zm256-384v128q0 26-19 45t-45 19h-1536q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1536q26 0 45 19t19 45zm-384-384v128q0 26-19 45t-45 19h-1152q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1152q26 0 45 19t19 45z"
                />
              </svg>
            </span>
            <span
              class="jodit_with_dropdownlist-trigger"
            />
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-undo jodit_disabled"
          disabled="disabled"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_undo"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1664 896q0 156-61 298t-164 245-245 164-298 61q-172 0-327-72.5t-264-204.5q-7-10-6.5-22.5t8.5-20.5l137-138q10-9 25-9 16 2 23 12 73 95 179 147t225 52q104 0 198.5-40.5t163.5-109.5 109.5-163.5 40.5-198.5-40.5-198.5-109.5-163.5-163.5-109.5-198.5-40.5q-98 0-188 35.5t-160 101.5l137 138q31 30 14 69-17 40-59 40h-448q-26 0-45-19t-19-45v-448q0-42 40-59 39-17 69 14l130 129q107-101 244.5-156.5t284.5-55.5q156 0 298 61t245 164 164 245 61 298z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-redo jodit_disabled"
          disabled="disabled"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_redo"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1664 256v448q0 26-19 45t-45 19h-448q-42 0-59-40-17-39 14-69l138-138q-148-137-349-137-104 0-198.5 40.5t-163.5 109.5-109.5 163.5-40.5 198.5 40.5 198.5 109.5 163.5 163.5 109.5 198.5 40.5q119 0 225-52t179-147q7-10 23-12 14 0 25 9l137 138q9 8 9.5 20.5t-7.5 22.5q-109 132-264 204.5t-327 72.5q-156 0-298-61t-245-164-164-245-61-298 61-298 164-245 245-164 298-61q147 0 284.5 55.5t244.5 156.5l130-129q29-31 70-14 39 17 39 59z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
      </ul>
      <div
        class="jodit_workplace"
        contenteditable="false"
        style="min-height: 200px; height: auto;"
      >
        <div
          class="jodit_progress_bar"
        >
          <div />
        </div>
        <div
          aria-disabled="false"
          class="jodit_wysiwyg"
          contenteditable="true"
          spellcheck="true"
          style="min-height: 198px;"
          tabindex="-1"
        />
        <div
          class="jodit_error_box_for_messages"
        />
        <span
          class="jodit_placeholder"
          style="display: block;"
        >
          Type something
        </span>
        <div
          class="jodit_source"
        >
          <textarea
            class="jodit_source_mirror"
            style="height: 0px; min-height: 198px;"
          />
        </div>
        <div
          class="jodit_search"
        >
          <div
            class="jodit_search_box"
          >
            <div
              class="jodit_search_inputs"
            >
              <input
                class="jodit_search-query"
                placeholder="Search for"
                tabindex="0"
                type="text"
              />
              <input
                class="jodit_search-replace"
                placeholder="Replace with"
                tabindex="0"
                type="text"
              />
            </div>
            <div
              class="jodit_search_counts"
            >
              <span>
                0/0
              </span>
            </div>
            <div
              class="jodit_search_buttons"
            >
              <button
                class="jodit_search_buttons-next"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 1792 1792"
                >
                  <path
                    d="M1395 736q0 13-10 23l-466 466q-10 10-23 10t-23-10l-466-466q-10-10-10-23t10-23l50-50q10-10 23-10t23 10l393 393 393-393q10-10 23-10t23 10l50 50q10 10 10 23z"
                  />
                </svg>
              </button>
              <button
                class="jodit_search_buttons-prev"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 1792 1792"
                >
                  <path
                    d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
                  />
                </svg>
              </button>
              <button
                class="jodit_search_buttons-cancel"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 16 16"
                >
                  <g
                    transform="translate(0,-1036.3622)"
                  >
                    <path
                      d="m 2,1050.3622 12,-12"
                      style="fill:none;stroke:#000000;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"
                    />
                    <path
                      d="m 2,1038.3622 12,12"
                      style="fill:none;stroke:#000000;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"
                    />
                  </g>
                </svg>
              </button>
              <button
                class="jodit_search_buttons-replace"
                tabindex="0"
                type="button"
              >
                Replace
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="jodit_statusbar"
        style="display: block;"
      >
        <div
          class="jodit_statusbar_item jodit_statusbar_item-right"
        >
          <span>
            Chars: 0
          </span>
        </div>
        <div
          class="jodit_statusbar_item jodit_statusbar_item-right"
        >
          <span>
            Words: 0
          </span>
        </div>
        <div
          class="jodit_statusbar_item"
        >
          <ul
            class="jodit_xpath"
          >
            <li
              class="jodit_toolbar_btn jodit_toolbar_btn-selectall"
            >
              <a>
                <span>
                  <svg
                    class="jodit_icon jodit_icon_selectall"
                    viewBox="0 0 18 18"
                  >
                    <g
                      fill-rule="evenodd"
                      stroke="none"
                      stroke-width="1"
                    >
                      <g
                        transform="translate(-381.000000, -381.000000)"
                      >
                        <g
                          transform="translate(381.000000, 381.000000)"
                        >
                          <path
                            d="M0,2 L2,2 L2,0 C0.9,0 0,0.9 0,2 L0,2 Z M0,10 L2,10 L2,8 L0,8 L0,10 L0,10 Z M4,18 L6,18 L6,16 L4,16 L4,18 L4,18 Z M0,6 L2,6 L2,4 L0,4 L0,6 L0,6 Z M10,0 L8,0 L8,2 L10,2 L10,0 L10,0 Z M16,0 L16,2 L18,2 C18,0.9 17.1,0 16,0 L16,0 Z M2,18 L2,16 L0,16 C0,17.1 0.9,18 2,18 L2,18 Z M0,14 L2,14 L2,12 L0,12 L0,14 L0,14 Z M6,0 L4,0 L4,2 L6,2 L6,0 L6,0 Z M8,18 L10,18 L10,16 L8,16 L8,18 L8,18 Z M16,10 L18,10 L18,8 L16,8 L16,10 L16,10 Z M16,18 C17.1,18 18,17.1 18,16 L16,16 L16,18 L16,18 Z M16,6 L18,6 L18,4 L16,4 L16,6 L16,6 Z M16,14 L18,14 L18,12 L16,12 L16,14 L16,14 Z M12,18 L14,18 L14,16 L12,16 L12,18 L12,18 Z M12,2 L14,2 L14,0 L12,0 L12,2 L12,2 Z M4,14 L14,14 L14,4 L4,4 L4,14 L4,14 Z M6,6 L12,6 L12,12 L6,12 L6,6 L6,6 Z"
                          />
                        </g>
                      </g>
                    </g>
                  </svg>
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="jodit-add-new-line"
        role="button"
        tabindex="-1"
        title="Break"
      >
        <span>
          <svg
            viewBox="0 0 128 128"
            xml:space="preserve"
          >
            <g>
              <polygon
                points="112.4560547,23.3203125 112.4560547,75.8154297 31.4853516,75.8154297 31.4853516,61.953125     16.0131836,72.6357422 0.5410156,83.3164063 16.0131836,93.9990234 31.4853516,104.6796875 31.4853516,90.8183594     112.4560547,90.8183594 112.4560547,90.8339844 127.4589844,90.8339844 127.4589844,23.3203125   "
              />
            </g>
          </svg>
        </span>
      </div>
    </div>
    <div
      style="display: none;"
    />
    <!---->
    <div
      class="text-editor__details"
    >
      <div
        class="v-messages theme--light error--text"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`text-editor Renders \`text-editor\` with files 1`] = `
<div
  class="text-editor"
>
  <label
    aria-hidden="true"
    class="v-label theme--light"
    style="left: 0px; position: relative; display: none;"
  >
  </label>
  <div
    class="text-editor"
  >
    <div
      class="jodit_container jodit_default_theme jodit_toolbar_size-middle jodit_wysiwyg_mode"
      contenteditable="false"
      style="min-height: 200px; min-width: 200px; max-width: 100%; height: auto; width: auto;"
    >
      <ul
        class="jodit_toolbar"
        style="width: auto;"
      >
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-source"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_source"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M553 1399l-50 50q-10 10-23 10t-23-10l-466-466q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l50 50q10 10 10 23t-10 23l-393 393 393 393q10 10 10 23t-10 23zm591-1067l-373 1291q-4 13-15.5 19.5t-23.5 2.5l-62-17q-13-4-19.5-15.5t-2.5-24.5l373-1291q4-13 15.5-19.5t23.5-2.5l62 17q13 4 19.5 15.5t2.5 24.5zm657 651l-466 466q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l393-393-393-393q-10-10-10-23t10-23l50-50q10-10 23-10t23 10l466 466q10 10 10 23t-10 23z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-bold"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_bold"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M747 1521q74 32 140 32 376 0 376-335 0-114-41-180-27-44-61.5-74t-67.5-46.5-80.5-25-84-10.5-94.5-2q-73 0-101 10 0 53-.5 159t-.5 158q0 8-1 67.5t-.5 96.5 4.5 83.5 12 66.5zm-14-746q42 7 109 7 82 0 143-13t110-44.5 74.5-89.5 25.5-142q0-70-29-122.5t-79-82-108-43.5-124-14q-50 0-130 13 0 50 4 151t4 152q0 27-.5 80t-.5 79q0 46 1 69zm-541 889l2-94q15-4 85-16t106-27q7-12 12.5-27t8.5-33.5 5.5-32.5 3-37.5.5-34v-65.5q0-982-22-1025-4-8-22-14.5t-44.5-11-49.5-7-48.5-4.5-30.5-3l-4-83q98-2 340-11.5t373-9.5q23 0 68.5.5t67.5.5q70 0 136.5 13t128.5 42 108 71 74 104.5 28 137.5q0 52-16.5 95.5t-39 72-64.5 57.5-73 45-84 40q154 35 256.5 134t102.5 248q0 100-35 179.5t-93.5 130.5-138 85.5-163.5 48.5-176 14q-44 0-132-3t-132-3q-106 0-307 11t-231 12z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-italic"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_italic"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M384 1662l17-85q6-2 81.5-21.5t111.5-37.5q28-35 41-101 1-7 62-289t114-543.5 52-296.5v-25q-24-13-54.5-18.5t-69.5-8-58-5.5l19-103q33 2 120 6.5t149.5 7 120.5 2.5q48 0 98.5-2.5t121-7 98.5-6.5q-5 39-19 89-30 10-101.5 28.5t-108.5 33.5q-8 19-14 42.5t-9 40-7.5 45.5-6.5 42q-27 148-87.5 419.5t-77.5 355.5q-2 9-13 58t-20 90-16 83.5-6 57.5l1 18q17 4 185 31-3 44-16 99-11 0-32.5 1.5t-32.5 1.5q-29 0-87-10t-86-10q-138-2-206-2-51 0-143 9t-121 11z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-strikethrough"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_strikethrough"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1760 896q14 0 23 9t9 23v64q0 14-9 23t-23 9h-1728q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h1728zm-1277-64q-28-35-51-80-48-97-48-188 0-181 134-309 133-127 393-127 50 0 167 19 66 12 177 48 10 38 21 118 14 123 14 183 0 18-5 45l-12 3-84-6-14-2q-50-149-103-205-88-91-210-91-114 0-182 59-67 58-67 146 0 73 66 140t279 129q69 20 173 66 58 28 95 52h-743zm507 256h411q7 39 7 92 0 111-41 212-23 55-71 104-37 35-109 81-80 48-153 66-80 21-203 21-114 0-195-23l-140-40q-57-16-72-28-8-8-8-22v-13q0-108-2-156-1-30 0-68l2-37v-44l102-2q15 34 30 71t22.5 56 12.5 27q35 57 80 94 43 36 105 57 59 22 132 22 64 0 139-27 77-26 122-86 47-61 47-129 0-84-81-157-34-29-137-71z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-underline"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_underline"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M176 223q-37-2-45-4l-3-88q13-1 40-1 60 0 112 4 132 7 166 7 86 0 168-3 116-4 146-5 56 0 86-2l-1 14 2 64v9q-60 9-124 9-60 0-79 25-13 14-13 132 0 13 .5 32.5t.5 25.5l1 229 14 280q6 124 51 202 35 59 96 92 88 47 177 47 104 0 191-28 56-18 99-51 48-36 65-64 36-56 53-114 21-73 21-229 0-79-3.5-128t-11-122.5-13.5-159.5l-4-59q-5-67-24-88-34-35-77-34l-100 2-14-3 2-86h84l205 10q76 3 196-10l18 2q6 38 6 51 0 7-4 31-45 12-84 13-73 11-79 17-15 15-15 41 0 7 1.5 27t1.5 31q8 19 22 396 6 195-15 304-15 76-41 122-38 65-112 123-75 57-182 89-109 33-255 33-167 0-284-46-119-47-179-122-61-76-83-195-16-80-16-237v-333q0-188-17-213-25-36-147-39zm1488 1409v-64q0-14-9-23t-23-9h-1472q-14 0-23 9t-9 23v64q0 14 9 23t23 9h1472q14 0 23-9t9-23z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-ul"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_ul"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M384 1408q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm0-512q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm1408 416v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5zm-1408-928q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm1408 416v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5zm0-512v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-ol"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_ol"
                role="img"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M381 1620q0 80-54.5 126t-135.5 46q-106 0-172-66l57-88q49 45 106 45 29 0 50.5-14.5t21.5-42.5q0-64-105-56l-26-56q8-10 32.5-43.5t42.5-54 37-38.5v-1q-16 0-48.5 1t-48.5 1v53h-106v-152h333v88l-95 115q51 12 81 49t30 88zm2-627v159h-362q-6-36-6-54 0-51 23.5-93t56.5-68 66-47.5 56.5-43.5 23.5-45q0-25-14.5-38.5t-39.5-13.5q-46 0-81 58l-85-59q24-51 71.5-79.5t105.5-28.5q73 0 123 41.5t50 112.5q0 50-34 91.5t-75 64.5-75.5 50.5-35.5 52.5h127v-60h105zm1409 319v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-14 9-23t23-9h1216q13 0 22.5 9.5t9.5 22.5zm-1408-899v99h-335v-99h107q0-41 .5-122t.5-121v-12h-2q-8 17-50 54l-71-76 136-127h106v404h108zm1408 387v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-14 9-23t23-9h1216q13 0 22.5 9.5t9.5 22.5zm0-512v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_with_dropdownlist jodit_toolbar_btn-font"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_font"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M789 559l-170 450q33 0 136.5 2t160.5 2q19 0 57-2-87-253-184-452zm-725 1105l2-79q23-7 56-12.5t57-10.5 49.5-14.5 44.5-29 31-50.5l237-616 280-724h128q8 14 11 21l205 480q33 78 106 257.5t114 274.5q15 34 58 144.5t72 168.5q20 45 35 57 19 15 88 29.5t84 20.5q6 38 6 57 0 4-.5 13t-.5 13q-63 0-190-8t-191-8q-76 0-215 7t-178 8q0-43 4-78l131-28q1 0 12.5-2.5t15.5-3.5 14.5-4.5 15-6.5 11-8 9-11 2.5-14q0-16-31-96.5t-72-177.5-42-100l-450-2q-26 58-76.5 195.5t-50.5 162.5q0 22 14 37.5t43.5 24.5 48.5 13.5 57 8.5 41 4q1 19 1 58 0 9-2 27-58 0-174.5-10t-174.5-10q-8 0-26.5 4t-21.5 4q-80 14-188 14z"
                />
              </svg>
            </span>
            <span
              class="jodit_with_dropdownlist-trigger"
            />
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_with_dropdownlist jodit_toolbar_btn-fontsize"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_fontsize"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1744 1408q33 0 42 18.5t-11 44.5l-126 162q-20 26-49 26t-49-26l-126-162q-20-26-11-44.5t42-18.5h80v-1024h-80q-33 0-42-18.5t11-44.5l126-162q20-26 49-26t49 26l126 162q20 26 11 44.5t-42 18.5h-80v1024h80zm-1663-1279l54 27q12 5 211 5 44 0 132-2t132-2q36 0 107.5.5t107.5.5h293q6 0 21 .5t20.5 0 16-3 17.5-9 15-17.5l42-1q4 0 14 .5t14 .5q2 112 2 336 0 80-5 109-39 14-68 18-25-44-54-128-3-9-11-48t-14.5-73.5-7.5-35.5q-6-8-12-12.5t-15.5-6-13-2.5-18-.5-16.5.5q-17 0-66.5-.5t-74.5-.5-64 2-71 6q-9 81-8 136 0 94 2 388t2 455q0 16-2.5 71.5t0 91.5 12.5 69q40 21 124 42.5t120 37.5q5 40 5 50 0 14-3 29l-34 1q-76 2-218-8t-207-10q-50 0-151 9t-152 9q-3-51-3-52v-9q17-27 61.5-43t98.5-29 78-27q19-42 19-383 0-101-3-303t-3-303v-117q0-2 .5-15.5t.5-25-1-25.5-3-24-5-14q-11-12-162-12-33 0-93 12t-80 26q-19 13-34 72.5t-31.5 111-42.5 53.5q-42-26-56-44v-383z"
                />
              </svg>
            </span>
            <span
              class="jodit_with_dropdownlist-trigger"
            />
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-brush"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_brush"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M896 1152q0-36-20-69-1-1-15.5-22.5t-25.5-38-25-44-21-50.5q-4-16-21-16t-21 16q-7 23-21 50.5t-25 44-25.5 38-15.5 22.5q-20 33-20 69 0 53 37.5 90.5t90.5 37.5 90.5-37.5 37.5-90.5zm512-128q0 212-150 362t-362 150-362-150-150-362q0-145 81-275 6-9 62.5-90.5t101-151 99.5-178 83-201.5q9-30 34-47t51-17 51.5 17 33.5 47q28 93 83 201.5t99.5 178 101 151 62.5 90.5q81 127 81 275z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_with_dropdownlist jodit_toolbar_btn-paragraph"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_paragraph"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1534 189v73q0 29-18.5 61t-42.5 32q-50 0-54 1-26 6-32 31-3 11-3 64v1152q0 25-18 43t-43 18h-108q-25 0-43-18t-18-43v-1218h-143v1218q0 25-17.5 43t-43.5 18h-108q-26 0-43.5-18t-17.5-43v-496q-147-12-245-59-126-58-192-179-64-117-64-259 0-166 88-286 88-118 209-159 111-37 417-37h479q25 0 43 18t18 43z"
                />
              </svg>
            </span>
            <span
              class="jodit_with_dropdownlist-trigger"
            />
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-image"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_image"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M576 576q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm1024 384v448h-1408v-192l320-320 160 160 512-512zm96-704h-1600q-13 0-22.5 9.5t-9.5 22.5v1216q0 13 9.5 22.5t22.5 9.5h1600q13 0 22.5-9.5t9.5-22.5v-1216q0-13-9.5-22.5t-22.5-9.5zm160 32v1216q0 66-47 113t-113 47h-1600q-66 0-113-47t-47-113v-1216q0-66 47-113t113-47h1600q66 0 113 47t47 113z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-table"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_table"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M576 1376v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm0-384v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm512 384v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm-512-768v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm512 384v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm512 384v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm-512-768v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm512 384v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm0-384v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm128-320v1088q0 66-47 113t-113 47h-1344q-66 0-113-47t-47-113v-1088q0-66 47-113t113-47h1344q66 0 113 47t47 113z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-link"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_link"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1520 1216q0-40-28-68l-208-208q-28-28-68-28-42 0-72 32 3 3 19 18.5t21.5 21.5 15 19 13 25.5 3.5 27.5q0 40-28 68t-68 28q-15 0-27.5-3.5t-25.5-13-19-15-21.5-21.5-18.5-19q-33 31-33 73 0 40 28 68l206 207q27 27 68 27 40 0 68-26l147-146q28-28 28-67zm-703-705q0-40-28-68l-206-207q-28-28-68-28-39 0-68 27l-147 146q-28 28-28 67 0 40 28 68l208 208q27 27 68 27 42 0 72-31-3-3-19-18.5t-21.5-21.5-15-19-13-25.5-3.5-27.5q0-40 28-68t68-28q15 0 27.5 3.5t25.5 13 19 15 21.5 21.5 18.5 19q33-31 33-73zm895 705q0 120-85 203l-147 146q-83 83-203 83-121 0-204-85l-206-207q-83-83-83-203 0-123 88-209l-88-88q-86 88-208 88-120 0-204-84l-208-208q-84-84-84-204t85-203l147-146q83-83 203-83 121 0 204 85l206 207q83 83 83 203 0 123-88 209l88 88q86-88 208-88 120 0 204 84l208 208q84 84 84 204z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_with_dropdownlist jodit_toolbar_btn-left"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_left"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1792 1344v128q0 26-19 45t-45 19h-1664q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1664q26 0 45 19t19 45zm-384-384v128q0 26-19 45t-45 19h-1280q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1280q26 0 45 19t19 45zm256-384v128q0 26-19 45t-45 19h-1536q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1536q26 0 45 19t19 45zm-384-384v128q0 26-19 45t-45 19h-1152q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1152q26 0 45 19t19 45z"
                />
              </svg>
            </span>
            <span
              class="jodit_with_dropdownlist-trigger"
            />
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-undo jodit_disabled"
          disabled="disabled"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_undo"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1664 896q0 156-61 298t-164 245-245 164-298 61q-172 0-327-72.5t-264-204.5q-7-10-6.5-22.5t8.5-20.5l137-138q10-9 25-9 16 2 23 12 73 95 179 147t225 52q104 0 198.5-40.5t163.5-109.5 109.5-163.5 40.5-198.5-40.5-198.5-109.5-163.5-163.5-109.5-198.5-40.5q-98 0-188 35.5t-160 101.5l137 138q31 30 14 69-17 40-59 40h-448q-26 0-45-19t-19-45v-448q0-42 40-59 39-17 69 14l130 129q107-101 244.5-156.5t284.5-55.5q156 0 298 61t245 164 164 245 61 298z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-redo jodit_disabled"
          disabled="disabled"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_redo"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1664 256v448q0 26-19 45t-45 19h-448q-42 0-59-40-17-39 14-69l138-138q-148-137-349-137-104 0-198.5 40.5t-163.5 109.5-109.5 163.5-40.5 198.5 40.5 198.5 109.5 163.5 163.5 109.5 198.5 40.5q119 0 225-52t179-147q7-10 23-12 14 0 25 9l137 138q9 8 9.5 20.5t-7.5 22.5q-109 132-264 204.5t-327 72.5q-156 0-298-61t-245-164-164-245-61-298 61-298 164-245 245-164 298-61q147 0 284.5 55.5t244.5 156.5l130-129q29-31 70-14 39 17 39 59z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
      </ul>
      <div
        class="jodit_workplace"
        contenteditable="false"
        style="min-height: 200px; height: auto;"
      >
        <div
          class="jodit_progress_bar"
        >
          <div />
        </div>
        <div
          aria-disabled="false"
          class="jodit_wysiwyg"
          contenteditable="true"
          spellcheck="true"
          style="min-height: 198px;"
          tabindex="-1"
        />
        <div
          class="jodit_error_box_for_messages"
        />
        <span
          class="jodit_placeholder"
          style="display: block;"
        >
          Type something
        </span>
        <div
          class="jodit_source"
        >
          <textarea
            class="jodit_source_mirror"
            style="height: 0px; min-height: 198px;"
          />
        </div>
        <div
          class="jodit_search"
        >
          <div
            class="jodit_search_box"
          >
            <div
              class="jodit_search_inputs"
            >
              <input
                class="jodit_search-query"
                placeholder="Search for"
                tabindex="0"
                type="text"
              />
              <input
                class="jodit_search-replace"
                placeholder="Replace with"
                tabindex="0"
                type="text"
              />
            </div>
            <div
              class="jodit_search_counts"
            >
              <span>
                0/0
              </span>
            </div>
            <div
              class="jodit_search_buttons"
            >
              <button
                class="jodit_search_buttons-next"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 1792 1792"
                >
                  <path
                    d="M1395 736q0 13-10 23l-466 466q-10 10-23 10t-23-10l-466-466q-10-10-10-23t10-23l50-50q10-10 23-10t23 10l393 393 393-393q10-10 23-10t23 10l50 50q10 10 10 23z"
                  />
                </svg>
              </button>
              <button
                class="jodit_search_buttons-prev"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 1792 1792"
                >
                  <path
                    d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
                  />
                </svg>
              </button>
              <button
                class="jodit_search_buttons-cancel"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 16 16"
                >
                  <g
                    transform="translate(0,-1036.3622)"
                  >
                    <path
                      d="m 2,1050.3622 12,-12"
                      style="fill:none;stroke:#000000;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"
                    />
                    <path
                      d="m 2,1038.3622 12,12"
                      style="fill:none;stroke:#000000;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"
                    />
                  </g>
                </svg>
              </button>
              <button
                class="jodit_search_buttons-replace"
                tabindex="0"
                type="button"
              >
                Replace
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="jodit_statusbar"
        style="display: block;"
      >
        <div
          class="jodit_statusbar_item jodit_statusbar_item-right"
        >
          <span>
            Chars: 0
          </span>
        </div>
        <div
          class="jodit_statusbar_item jodit_statusbar_item-right"
        >
          <span>
            Words: 0
          </span>
        </div>
        <div
          class="jodit_statusbar_item"
        >
          <ul
            class="jodit_xpath"
          >
            <li
              class="jodit_toolbar_btn jodit_toolbar_btn-selectall"
            >
              <a>
                <span>
                  <svg
                    class="jodit_icon jodit_icon_selectall"
                    viewBox="0 0 18 18"
                  >
                    <g
                      fill-rule="evenodd"
                      stroke="none"
                      stroke-width="1"
                    >
                      <g
                        transform="translate(-381.000000, -381.000000)"
                      >
                        <g
                          transform="translate(381.000000, 381.000000)"
                        >
                          <path
                            d="M0,2 L2,2 L2,0 C0.9,0 0,0.9 0,2 L0,2 Z M0,10 L2,10 L2,8 L0,8 L0,10 L0,10 Z M4,18 L6,18 L6,16 L4,16 L4,18 L4,18 Z M0,6 L2,6 L2,4 L0,4 L0,6 L0,6 Z M10,0 L8,0 L8,2 L10,2 L10,0 L10,0 Z M16,0 L16,2 L18,2 C18,0.9 17.1,0 16,0 L16,0 Z M2,18 L2,16 L0,16 C0,17.1 0.9,18 2,18 L2,18 Z M0,14 L2,14 L2,12 L0,12 L0,14 L0,14 Z M6,0 L4,0 L4,2 L6,2 L6,0 L6,0 Z M8,18 L10,18 L10,16 L8,16 L8,18 L8,18 Z M16,10 L18,10 L18,8 L16,8 L16,10 L16,10 Z M16,18 C17.1,18 18,17.1 18,16 L16,16 L16,18 L16,18 Z M16,6 L18,6 L18,4 L16,4 L16,6 L16,6 Z M16,14 L18,14 L18,12 L16,12 L16,14 L16,14 Z M12,18 L14,18 L14,16 L12,16 L12,18 L12,18 Z M12,2 L14,2 L14,0 L12,0 L12,2 L12,2 Z M4,14 L14,14 L14,4 L4,4 L4,14 L4,14 Z M6,6 L12,6 L12,12 L6,12 L6,6 L6,6 Z"
                          />
                        </g>
                      </g>
                    </g>
                  </svg>
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="jodit-add-new-line"
        role="button"
        tabindex="-1"
        title="Break"
      >
        <span>
          <svg
            viewBox="0 0 128 128"
            xml:space="preserve"
          >
            <g>
              <polygon
                points="112.4560547,23.3203125 112.4560547,75.8154297 31.4853516,75.8154297 31.4853516,61.953125     16.0131836,72.6357422 0.5410156,83.3164063 16.0131836,93.9990234 31.4853516,104.6796875 31.4853516,90.8183594     112.4560547,90.8183594 112.4560547,90.8339844 127.4589844,90.8339844 127.4589844,23.3203125   "
              />
            </g>
          </svg>
        </span>
      </div>
    </div>
    <div
      style="display: none;"
    />
    <!---->
    <div
      class="text-editor__details"
    >
      <div
        class="v-messages theme--light error--text"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`text-editor Renders \`text-editor\` with variables 1`] = `
<div
  class="text-editor"
>
  <label
    aria-hidden="true"
    class="v-label theme--light"
    style="left: 0px; position: relative; display: none;"
  >
  </label>
  <div
    class="text-editor"
  >
    <div
      class="jodit_container jodit_default_theme jodit_toolbar_size-middle jodit_wysiwyg_mode"
      contenteditable="false"
      style="min-height: 200px; min-width: 200px; max-width: 100%; height: auto; width: auto;"
    >
      <ul
        class="jodit_toolbar"
        style="width: auto;"
      >
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-source"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_source"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M553 1399l-50 50q-10 10-23 10t-23-10l-466-466q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l50 50q10 10 10 23t-10 23l-393 393 393 393q10 10 10 23t-10 23zm591-1067l-373 1291q-4 13-15.5 19.5t-23.5 2.5l-62-17q-13-4-19.5-15.5t-2.5-24.5l373-1291q4-13 15.5-19.5t23.5-2.5l62 17q13 4 19.5 15.5t2.5 24.5zm657 651l-466 466q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l393-393-393-393q-10-10-10-23t10-23l50-50q10-10 23-10t23 10l466 466q10 10 10 23t-10 23z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-bold"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_bold"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M747 1521q74 32 140 32 376 0 376-335 0-114-41-180-27-44-61.5-74t-67.5-46.5-80.5-25-84-10.5-94.5-2q-73 0-101 10 0 53-.5 159t-.5 158q0 8-1 67.5t-.5 96.5 4.5 83.5 12 66.5zm-14-746q42 7 109 7 82 0 143-13t110-44.5 74.5-89.5 25.5-142q0-70-29-122.5t-79-82-108-43.5-124-14q-50 0-130 13 0 50 4 151t4 152q0 27-.5 80t-.5 79q0 46 1 69zm-541 889l2-94q15-4 85-16t106-27q7-12 12.5-27t8.5-33.5 5.5-32.5 3-37.5.5-34v-65.5q0-982-22-1025-4-8-22-14.5t-44.5-11-49.5-7-48.5-4.5-30.5-3l-4-83q98-2 340-11.5t373-9.5q23 0 68.5.5t67.5.5q70 0 136.5 13t128.5 42 108 71 74 104.5 28 137.5q0 52-16.5 95.5t-39 72-64.5 57.5-73 45-84 40q154 35 256.5 134t102.5 248q0 100-35 179.5t-93.5 130.5-138 85.5-163.5 48.5-176 14q-44 0-132-3t-132-3q-106 0-307 11t-231 12z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-italic"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_italic"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M384 1662l17-85q6-2 81.5-21.5t111.5-37.5q28-35 41-101 1-7 62-289t114-543.5 52-296.5v-25q-24-13-54.5-18.5t-69.5-8-58-5.5l19-103q33 2 120 6.5t149.5 7 120.5 2.5q48 0 98.5-2.5t121-7 98.5-6.5q-5 39-19 89-30 10-101.5 28.5t-108.5 33.5q-8 19-14 42.5t-9 40-7.5 45.5-6.5 42q-27 148-87.5 419.5t-77.5 355.5q-2 9-13 58t-20 90-16 83.5-6 57.5l1 18q17 4 185 31-3 44-16 99-11 0-32.5 1.5t-32.5 1.5q-29 0-87-10t-86-10q-138-2-206-2-51 0-143 9t-121 11z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-strikethrough"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_strikethrough"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1760 896q14 0 23 9t9 23v64q0 14-9 23t-23 9h-1728q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h1728zm-1277-64q-28-35-51-80-48-97-48-188 0-181 134-309 133-127 393-127 50 0 167 19 66 12 177 48 10 38 21 118 14 123 14 183 0 18-5 45l-12 3-84-6-14-2q-50-149-103-205-88-91-210-91-114 0-182 59-67 58-67 146 0 73 66 140t279 129q69 20 173 66 58 28 95 52h-743zm507 256h411q7 39 7 92 0 111-41 212-23 55-71 104-37 35-109 81-80 48-153 66-80 21-203 21-114 0-195-23l-140-40q-57-16-72-28-8-8-8-22v-13q0-108-2-156-1-30 0-68l2-37v-44l102-2q15 34 30 71t22.5 56 12.5 27q35 57 80 94 43 36 105 57 59 22 132 22 64 0 139-27 77-26 122-86 47-61 47-129 0-84-81-157-34-29-137-71z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-underline"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_underline"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M176 223q-37-2-45-4l-3-88q13-1 40-1 60 0 112 4 132 7 166 7 86 0 168-3 116-4 146-5 56 0 86-2l-1 14 2 64v9q-60 9-124 9-60 0-79 25-13 14-13 132 0 13 .5 32.5t.5 25.5l1 229 14 280q6 124 51 202 35 59 96 92 88 47 177 47 104 0 191-28 56-18 99-51 48-36 65-64 36-56 53-114 21-73 21-229 0-79-3.5-128t-11-122.5-13.5-159.5l-4-59q-5-67-24-88-34-35-77-34l-100 2-14-3 2-86h84l205 10q76 3 196-10l18 2q6 38 6 51 0 7-4 31-45 12-84 13-73 11-79 17-15 15-15 41 0 7 1.5 27t1.5 31q8 19 22 396 6 195-15 304-15 76-41 122-38 65-112 123-75 57-182 89-109 33-255 33-167 0-284-46-119-47-179-122-61-76-83-195-16-80-16-237v-333q0-188-17-213-25-36-147-39zm1488 1409v-64q0-14-9-23t-23-9h-1472q-14 0-23 9t-9 23v64q0 14 9 23t23 9h1472q14 0 23-9t9-23z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-ul"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_ul"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M384 1408q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm0-512q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm1408 416v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5zm-1408-928q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm1408 416v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5zm0-512v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-ol"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_ol"
                role="img"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M381 1620q0 80-54.5 126t-135.5 46q-106 0-172-66l57-88q49 45 106 45 29 0 50.5-14.5t21.5-42.5q0-64-105-56l-26-56q8-10 32.5-43.5t42.5-54 37-38.5v-1q-16 0-48.5 1t-48.5 1v53h-106v-152h333v88l-95 115q51 12 81 49t30 88zm2-627v159h-362q-6-36-6-54 0-51 23.5-93t56.5-68 66-47.5 56.5-43.5 23.5-45q0-25-14.5-38.5t-39.5-13.5q-46 0-81 58l-85-59q24-51 71.5-79.5t105.5-28.5q73 0 123 41.5t50 112.5q0 50-34 91.5t-75 64.5-75.5 50.5-35.5 52.5h127v-60h105zm1409 319v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-14 9-23t23-9h1216q13 0 22.5 9.5t9.5 22.5zm-1408-899v99h-335v-99h107q0-41 .5-122t.5-121v-12h-2q-8 17-50 54l-71-76 136-127h106v404h108zm1408 387v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-14 9-23t23-9h1216q13 0 22.5 9.5t9.5 22.5zm0-512v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_with_dropdownlist jodit_toolbar_btn-font"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_font"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M789 559l-170 450q33 0 136.5 2t160.5 2q19 0 57-2-87-253-184-452zm-725 1105l2-79q23-7 56-12.5t57-10.5 49.5-14.5 44.5-29 31-50.5l237-616 280-724h128q8 14 11 21l205 480q33 78 106 257.5t114 274.5q15 34 58 144.5t72 168.5q20 45 35 57 19 15 88 29.5t84 20.5q6 38 6 57 0 4-.5 13t-.5 13q-63 0-190-8t-191-8q-76 0-215 7t-178 8q0-43 4-78l131-28q1 0 12.5-2.5t15.5-3.5 14.5-4.5 15-6.5 11-8 9-11 2.5-14q0-16-31-96.5t-72-177.5-42-100l-450-2q-26 58-76.5 195.5t-50.5 162.5q0 22 14 37.5t43.5 24.5 48.5 13.5 57 8.5 41 4q1 19 1 58 0 9-2 27-58 0-174.5-10t-174.5-10q-8 0-26.5 4t-21.5 4q-80 14-188 14z"
                />
              </svg>
            </span>
            <span
              class="jodit_with_dropdownlist-trigger"
            />
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_with_dropdownlist jodit_toolbar_btn-fontsize"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_fontsize"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1744 1408q33 0 42 18.5t-11 44.5l-126 162q-20 26-49 26t-49-26l-126-162q-20-26-11-44.5t42-18.5h80v-1024h-80q-33 0-42-18.5t11-44.5l126-162q20-26 49-26t49 26l126 162q20 26 11 44.5t-42 18.5h-80v1024h80zm-1663-1279l54 27q12 5 211 5 44 0 132-2t132-2q36 0 107.5.5t107.5.5h293q6 0 21 .5t20.5 0 16-3 17.5-9 15-17.5l42-1q4 0 14 .5t14 .5q2 112 2 336 0 80-5 109-39 14-68 18-25-44-54-128-3-9-11-48t-14.5-73.5-7.5-35.5q-6-8-12-12.5t-15.5-6-13-2.5-18-.5-16.5.5q-17 0-66.5-.5t-74.5-.5-64 2-71 6q-9 81-8 136 0 94 2 388t2 455q0 16-2.5 71.5t0 91.5 12.5 69q40 21 124 42.5t120 37.5q5 40 5 50 0 14-3 29l-34 1q-76 2-218-8t-207-10q-50 0-151 9t-152 9q-3-51-3-52v-9q17-27 61.5-43t98.5-29 78-27q19-42 19-383 0-101-3-303t-3-303v-117q0-2 .5-15.5t.5-25-1-25.5-3-24-5-14q-11-12-162-12-33 0-93 12t-80 26q-19 13-34 72.5t-31.5 111-42.5 53.5q-42-26-56-44v-383z"
                />
              </svg>
            </span>
            <span
              class="jodit_with_dropdownlist-trigger"
            />
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-brush"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_brush"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M896 1152q0-36-20-69-1-1-15.5-22.5t-25.5-38-25-44-21-50.5q-4-16-21-16t-21 16q-7 23-21 50.5t-25 44-25.5 38-15.5 22.5q-20 33-20 69 0 53 37.5 90.5t90.5 37.5 90.5-37.5 37.5-90.5zm512-128q0 212-150 362t-362 150-362-150-150-362q0-145 81-275 6-9 62.5-90.5t101-151 99.5-178 83-201.5q9-30 34-47t51-17 51.5 17 33.5 47q28 93 83 201.5t99.5 178 101 151 62.5 90.5q81 127 81 275z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_with_dropdownlist jodit_toolbar_btn-paragraph"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_paragraph"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1534 189v73q0 29-18.5 61t-42.5 32q-50 0-54 1-26 6-32 31-3 11-3 64v1152q0 25-18 43t-43 18h-108q-25 0-43-18t-18-43v-1218h-143v1218q0 25-17.5 43t-43.5 18h-108q-26 0-43.5-18t-17.5-43v-496q-147-12-245-59-126-58-192-179-64-117-64-259 0-166 88-286 88-118 209-159 111-37 417-37h479q25 0 43 18t18 43z"
                />
              </svg>
            </span>
            <span
              class="jodit_with_dropdownlist-trigger"
            />
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-image"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_image"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M576 576q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm1024 384v448h-1408v-192l320-320 160 160 512-512zm96-704h-1600q-13 0-22.5 9.5t-9.5 22.5v1216q0 13 9.5 22.5t22.5 9.5h1600q13 0 22.5-9.5t9.5-22.5v-1216q0-13-9.5-22.5t-22.5-9.5zm160 32v1216q0 66-47 113t-113 47h-1600q-66 0-113-47t-47-113v-1216q0-66 47-113t113-47h1600q66 0 113 47t47 113z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-table"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_table"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M576 1376v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm0-384v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm512 384v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm-512-768v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm512 384v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm512 384v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm-512-768v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm512 384v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm0-384v-192q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v192q0 14 9 23t23 9h320q14 0 23-9t9-23zm128-320v1088q0 66-47 113t-113 47h-1344q-66 0-113-47t-47-113v-1088q0-66 47-113t113-47h1344q66 0 113 47t47 113z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-link"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_link"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1520 1216q0-40-28-68l-208-208q-28-28-68-28-42 0-72 32 3 3 19 18.5t21.5 21.5 15 19 13 25.5 3.5 27.5q0 40-28 68t-68 28q-15 0-27.5-3.5t-25.5-13-19-15-21.5-21.5-18.5-19q-33 31-33 73 0 40 28 68l206 207q27 27 68 27 40 0 68-26l147-146q28-28 28-67zm-703-705q0-40-28-68l-206-207q-28-28-68-28-39 0-68 27l-147 146q-28 28-28 67 0 40 28 68l208 208q27 27 68 27 42 0 72-31-3-3-19-18.5t-21.5-21.5-15-19-13-25.5-3.5-27.5q0-40 28-68t68-28q15 0 27.5 3.5t25.5 13 19 15 21.5 21.5 18.5 19q33-31 33-73zm895 705q0 120-85 203l-147 146q-83 83-203 83-121 0-204-85l-206-207q-83-83-83-203 0-123 88-209l-88-88q-86 88-208 88-120 0-204-84l-208-208q-84-84-84-204t85-203l147-146q83-83 203-83 121 0 204 85l206 207q83 83 83 203 0 123-88 209l88 88q86-88 208-88 120 0 204 84l208 208q84 84 84 204z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_with_dropdownlist jodit_toolbar_btn-left"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_left"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1792 1344v128q0 26-19 45t-45 19h-1664q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1664q26 0 45 19t19 45zm-384-384v128q0 26-19 45t-45 19h-1280q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1280q26 0 45 19t19 45zm256-384v128q0 26-19 45t-45 19h-1536q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1536q26 0 45 19t19 45zm-384-384v128q0 26-19 45t-45 19h-1152q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1152q26 0 45 19t19 45z"
                />
              </svg>
            </span>
            <span
              class="jodit_with_dropdownlist-trigger"
            />
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-undo jodit_disabled"
          disabled="disabled"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_undo"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1664 896q0 156-61 298t-164 245-245 164-298 61q-172 0-327-72.5t-264-204.5q-7-10-6.5-22.5t8.5-20.5l137-138q10-9 25-9 16 2 23 12 73 95 179 147t225 52q104 0 198.5-40.5t163.5-109.5 109.5-163.5 40.5-198.5-40.5-198.5-109.5-163.5-163.5-109.5-198.5-40.5q-98 0-188 35.5t-160 101.5l137 138q31 30 14 69-17 40-59 40h-448q-26 0-45-19t-19-45v-448q0-42 40-59 39-17 69 14l130 129q107-101 244.5-156.5t284.5-55.5q156 0 298 61t245 164 164 245 61 298z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-redo jodit_disabled"
          disabled="disabled"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_redo"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1664 256v448q0 26-19 45t-45 19h-448q-42 0-59-40-17-39 14-69l138-138q-148-137-349-137-104 0-198.5 40.5t-163.5 109.5-109.5 163.5-40.5 198.5 40.5 198.5 109.5 163.5 163.5 109.5 198.5 40.5q119 0 225-52t179-147q7-10 23-12 14 0 25 9l137 138q9 8 9.5 20.5t-7.5 22.5q-109 132-264 204.5t-327 72.5q-156 0-298-61t-245-164-164-245-61-298 61-298 164-245 245-164 298-61q147 0 284.5 55.5t244.5 156.5l130-129q29-31 70-14 39 17 39 59z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-variables"
        >
          <span
            class="text-editor__variables-button"
          />
        </li>
      </ul>
      <div
        class="jodit_workplace"
        contenteditable="false"
        style="min-height: 200px; height: auto;"
      >
        <div
          class="jodit_progress_bar"
        >
          <div />
        </div>
        <div
          aria-disabled="false"
          class="jodit_wysiwyg"
          contenteditable="true"
          spellcheck="true"
          style="min-height: 198px;"
          tabindex="-1"
        >
          {{ test.test }}
        </div>
        <div
          class="jodit_error_box_for_messages"
        />
        <span
          class="jodit_placeholder"
          style="display: none;"
        >
          Type something
        </span>
        <div
          class="jodit_source"
        >
          <textarea
            class="jodit_source_mirror"
            style="height: 0px; min-height: 198px;"
          />
        </div>
        <div
          class="jodit_search"
        >
          <div
            class="jodit_search_box"
          >
            <div
              class="jodit_search_inputs"
            >
              <input
                class="jodit_search-query"
                placeholder="Search for"
                tabindex="0"
                type="text"
              />
              <input
                class="jodit_search-replace"
                placeholder="Replace with"
                tabindex="0"
                type="text"
              />
            </div>
            <div
              class="jodit_search_counts"
            >
              <span>
                0/0
              </span>
            </div>
            <div
              class="jodit_search_buttons"
            >
              <button
                class="jodit_search_buttons-next"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 1792 1792"
                >
                  <path
                    d="M1395 736q0 13-10 23l-466 466q-10 10-23 10t-23-10l-466-466q-10-10-10-23t10-23l50-50q10-10 23-10t23 10l393 393 393-393q10-10 23-10t23 10l50 50q10 10 10 23z"
                  />
                </svg>
              </button>
              <button
                class="jodit_search_buttons-prev"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 1792 1792"
                >
                  <path
                    d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
                  />
                </svg>
              </button>
              <button
                class="jodit_search_buttons-cancel"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 16 16"
                >
                  <g
                    transform="translate(0,-1036.3622)"
                  >
                    <path
                      d="m 2,1050.3622 12,-12"
                      style="fill:none;stroke:#000000;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"
                    />
                    <path
                      d="m 2,1038.3622 12,12"
                      style="fill:none;stroke:#000000;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"
                    />
                  </g>
                </svg>
              </button>
              <button
                class="jodit_search_buttons-replace"
                tabindex="0"
                type="button"
              >
                Replace
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="jodit_statusbar"
        style="display: block;"
      >
        <div
          class="jodit_statusbar_item jodit_statusbar_item-right"
        >
          <span>
            Chars: 13
          </span>
        </div>
        <div
          class="jodit_statusbar_item jodit_statusbar_item-right"
        >
          <span>
            Words: 3
          </span>
        </div>
        <div
          class="jodit_statusbar_item"
        >
          <ul
            class="jodit_xpath"
          >
            <li
              class="jodit_toolbar_btn jodit_toolbar_btn-selectall"
            >
              <a>
                <span>
                  <svg
                    class="jodit_icon jodit_icon_selectall"
                    viewBox="0 0 18 18"
                  >
                    <g
                      fill-rule="evenodd"
                      stroke="none"
                      stroke-width="1"
                    >
                      <g
                        transform="translate(-381.000000, -381.000000)"
                      >
                        <g
                          transform="translate(381.000000, 381.000000)"
                        >
                          <path
                            d="M0,2 L2,2 L2,0 C0.9,0 0,0.9 0,2 L0,2 Z M0,10 L2,10 L2,8 L0,8 L0,10 L0,10 Z M4,18 L6,18 L6,16 L4,16 L4,18 L4,18 Z M0,6 L2,6 L2,4 L0,4 L0,6 L0,6 Z M10,0 L8,0 L8,2 L10,2 L10,0 L10,0 Z M16,0 L16,2 L18,2 C18,0.9 17.1,0 16,0 L16,0 Z M2,18 L2,16 L0,16 C0,17.1 0.9,18 2,18 L2,18 Z M0,14 L2,14 L2,12 L0,12 L0,14 L0,14 Z M6,0 L4,0 L4,2 L6,2 L6,0 L6,0 Z M8,18 L10,18 L10,16 L8,16 L8,18 L8,18 Z M16,10 L18,10 L18,8 L16,8 L16,10 L16,10 Z M16,18 C17.1,18 18,17.1 18,16 L16,16 L16,18 L16,18 Z M16,6 L18,6 L18,4 L16,4 L16,6 L16,6 Z M16,14 L18,14 L18,12 L16,12 L16,14 L16,14 Z M12,18 L14,18 L14,16 L12,16 L12,18 L12,18 Z M12,2 L14,2 L14,0 L12,0 L12,2 L12,2 Z M4,14 L14,14 L14,4 L4,4 L4,14 L4,14 Z M6,6 L12,6 L12,12 L6,12 L6,6 L6,6 Z"
                          />
                        </g>
                      </g>
                    </g>
                  </svg>
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="jodit-add-new-line"
        role="button"
        tabindex="-1"
        title="Break"
      >
        <span>
          <svg
            viewBox="0 0 128 128"
            xml:space="preserve"
          >
            <g>
              <polygon
                points="112.4560547,23.3203125 112.4560547,75.8154297 31.4853516,75.8154297 31.4853516,61.953125     16.0131836,72.6357422 0.5410156,83.3164063 16.0131836,93.9990234 31.4853516,104.6796875 31.4853516,90.8183594     112.4560547,90.8183594 112.4560547,90.8339844 127.4589844,90.8339844 127.4589844,23.3203125   "
              />
            </g>
          </svg>
        </span>
      </div>
    </div>
    <div
      style="display: none;"
    >
      {{ test.test }}
    </div>
    <variables-menu-stub
      dense="true"
      positionx="112"
      positiony="189"
      value=""
      variables="[object Object]"
      visible="true"
    />
    <div
      class="text-editor__details"
    >
      <div
        class="v-messages theme--light error--text"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;
